// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deserializeHash FK columns from relations should deserialize FK column from owning relation 1`] = `
{
  "authorId": "author-1",
  "name": "test",
}
`;

exports[`deserializeHash FK columns from relations should not deserialize FK for ManyToMany relations 1`] = `
{
  "name": "test",
}
`;

exports[`deserializeHash FK columns from relations should return null for absent FK column 1`] = `
{
  "authorId": null,
  "name": "test",
}
`;

exports[`deserializeHash FK columns from relations should skip FK column already handled by fields 1`] = `
{
  "authorId": "a1",
  "name": "test",
}
`;

exports[`deserializeHash absent keys should return null for absent field key 1`] = `
{
  "email": null,
  "name": "test",
}
`;

exports[`deserializeHash basic types should deserialize bigint value 1`] = `
{
  "count": 9007199254740993n,
}
`;

exports[`deserializeHash basic types should deserialize boolean false 1`] = `
{
  "active": false,
}
`;

exports[`deserializeHash basic types should deserialize boolean true 1`] = `
{
  "active": true,
}
`;

exports[`deserializeHash basic types should deserialize decimal value 1`] = `
{
  "amount": 99.99,
}
`;

exports[`deserializeHash basic types should deserialize float value 1`] = `
{
  "score": 3.14,
}
`;

exports[`deserializeHash basic types should deserialize integer value 1`] = `
{
  "age": 42,
}
`;

exports[`deserializeHash basic types should deserialize real value 1`] = `
{
  "weight": 72.5,
}
`;

exports[`deserializeHash basic types should deserialize smallint value 1`] = `
{
  "rank": 5,
}
`;

exports[`deserializeHash basic types should deserialize string value 1`] = `
{
  "name": "hello",
}
`;

exports[`deserializeHash basic types should deserialize uuid as string 1`] = `
{
  "id": "550e8400-e29b-41d4-a716-446655440000",
}
`;

exports[`deserializeHash computed fields should skip computed fields 1`] = `
{
  "name": "test",
}
`;

exports[`deserializeHash error handling for invalid data should deserialize bigint field with large valid value 1`] = `
{
  "count": 12345678901234567890n,
}
`;

exports[`deserializeHash error handling for invalid data should deserialize float field with valid scientific notation 1`] = `
{
  "distance": 15000000000,
}
`;

exports[`deserializeHash error handling for invalid data should deserialize integer field with valid negative number 1`] = `
{
  "offset": -42,
}
`;

exports[`deserializeHash error handling for invalid data should match snapshot for bigint invalid error message 1`] = `"Failed to deserialize bigint from value: "not-a-number""`;

exports[`deserializeHash error handling for invalid data should match snapshot for decimal invalid error message 1`] = `"Failed to deserialize decimal from value: "xyz""`;

exports[`deserializeHash error handling for invalid data should match snapshot for float invalid error message 1`] = `"Failed to deserialize float from value: "xyz""`;

exports[`deserializeHash error handling for invalid data should match snapshot for integer invalid error message 1`] = `"Failed to deserialize integer from value: "abc""`;

exports[`deserializeHash error handling for invalid data should match snapshot for real invalid error message 1`] = `"Failed to deserialize real from value: "xyz""`;

exports[`deserializeHash string-like types pass through should pass through binary as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through cidr as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through email as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through enum as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through inet as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through interval as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through macaddr as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through string as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through text as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through time as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through url as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through varchar as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash string-like types pass through should pass through xml as string 1`] = `
{
  "val": "test-value",
}
`;

exports[`deserializeHash structured types should deserialize array from JSON 1`] = `
{
  "tags": [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`deserializeHash structured types should deserialize json from JSON 1`] = `
{
  "config": {
    "nested": {
      "value": 1,
    },
  },
}
`;

exports[`deserializeHash structured types should deserialize object from JSON 1`] = `
{
  "meta": {
    "foo": "bar",
  },
}
`;

exports[`deserializeHash transform should apply transform.from() when value is non-null 1`] = `
{
  "data": "transformed:raw",
}
`;

exports[`deserializeHash transform should not apply transform when value is null (absent) 1`] = `
{
  "data": null,
}
`;
